# napari-sphinx-theme

./: .buildinfo  .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  admonitions.html  build.js  colors.html  derp.html  derp.py  genindex.html  index.html  noxfile.py  objects.inv  package.json  postcss.config.js  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sitemap.xml  sphinx_design.html  tailwind.config.js  test1.html  test2.html  test_a_very_long_page_name.html  tsconfig.json  vite.config.ts  webpack.config.js
.doctrees/: admonitions.doctree  colors.doctree  environment.pickle  index.doctree  sphinx_design.doctree  test1.doctree  test2.doctree  test_a_very_long_page_name.doctree
.doctrees/contribute/: index.doctree  manual.doctree  setup.doctree  topics.doctree
.doctrees/demo/: api.doctree  example_pandas.doctree  index.doctree  mult_headers.doctree  no-sidebar.doctree  theme-elements.doctree
.doctrees/demo/kitchen-sink/: api.doctree  calendar.doctree  headings.doctree  index.doctree  lists-and-tables.doctree  paragraph-markup.doctree  video.doctree
.doctrees/demo/subpages/: index.doctree  subpage1.doctree  subpage2.doctree
.doctrees/demo/subpages/subsubpages/: index.doctree  subsubpage1.doctree  subsubpage10.doctree  subsubpage11.doctree  subsubpage12.doctree  subsubpage13.doctree  subsubpage14.doctree  subsubpage15.doctree  subsubpage16.doctree  subsubpage17.doctree  subsubpage18.doctree  subsubpage19.doctree  subsubpage2.doctree  subsubpage20.doctree  subsubpage3.doctree  subsubpage4.doctree  subsubpage5.doctree  subsubpage6.doctree  subsubpage7.doctree  subsubpage8.doctree  subsubpage9.doctree
.doctrees/user_guide/: accessibility.doctree  configuring.doctree  customizing.doctree  index.doctree  install.doctree  sections.doctree
.github/: dependabot.yml
.github/workflows/: build_napari.yml  deploy.yml  release.yml  tests.yml
_sources/: sphinx_design.rst.txt  test1.rst.txt  test2.rst.txt
_sources/contribute/: index.md.txt
_sources/demo/kitchen-sink/: index.rst.txt
_sources/user_guide/: configuring.rst.txt
_static/: documentation_options.js  pygments.css  switcher.json
_static/css/: napari-sphinx-theme.css
_static/scripts/: napari-sphinx-theme.js.LICENSE.txt
_static/styles/: napari-sphinx-theme.css
contribute/: index.html  manual.html  setup.html  topics.html
demo/: api.html  example_pandas.html  index.html  mult_headers.html  no-sidebar.html  theme-elements.html
demo/kitchen-sink/: api.html  calendar.html  headings.html  index.html  lists-and-tables.html  paragraph-markup.html  video.html
demo/subpages/: index.html  subpage1.html  subpage2.html
demo/subpages/subsubpages/: index.html  subsubpage1.html  subsubpage10.html  subsubpage11.html  subsubpage12.html  subsubpage13.html  subsubpage14.html  subsubpage15.html  subsubpage16.html  subsubpage17.html  subsubpage18.html  subsubpage19.html  subsubpage2.html  subsubpage20.html  subsubpage3.html  subsubpage4.html  subsubpage5.html  subsubpage6.html  subsubpage7.html  subsubpage8.html  subsubpage9.html
docs/: Makefile  admonitions.rst  colors.rst  conf.py  index.rst  quickstart.md  test1.rst  test_a_very_long_page_name.rst
docs/_static/: switcher.json
docs/demo/kitchen-sink/: calendar.rst  headings.rst  index.rst  video.rst
docs/demo/static/: mitosis.webm
eslint/: dev.js  typescript.js
jupyter_execute/demo/: theme-elements.ipynb  theme-elements.py
lib/napari_sphinx_theme/: __init__.py  _version.py  theme.conf
lib/napari_sphinx_theme/partials/: github-purple.html  image-sc-purple.html  mastodon.html  zulip-purple.html
lib/napari_sphinx_theme/static/css/: napari-sphinx-theme.css
napari_sphinx_theme/: __init__.py  footer.html  layout.html  napari-copyright.html  napari-footer-links.html  napari-layout.html  napari_code_theme.py  page-toc.html  search-button-field.html  search-field.html  theme.conf
napari_sphinx_theme/partials/: mastodon-purple.html  menu.html  napari-hub-purple.html  twitter-light-blue.html  twitter.html
napari_sphinx_theme/static/css/: napari-sphinx-theme.css
scripts/: build.mjs  clean.mjs  constants.mjs  dev.mjs
src/napari_sphinx_theme/: __init__.py  calendar.py  toc.py
src/napari_sphinx_theme/assets/: napari.tsx
src/napari_sphinx_theme/assets/components/: Link.tsx
src/napari_sphinx_theme/assets/components/Calendar/: Calendar.tsx  CalendarEventButton.tsx  CalendarEventPopup.tsx  CalendarFooter.tsx  CalendarMonthView.tsx  CalendarNavigation.tsx  CalendarTile.tsx  CalendarWeekView.tsx  CalenderFilter.tsx  CopyCalendarButton.tsx  context.tsx  gapi.ts  types.ts  useFetchCalendarEvents.ts
src/napari_sphinx_theme/assets/components/Popup/: Popup.tsx
src/napari_sphinx_theme/assets/components/icons/: Close.tsx  Menu.tsx  PlusIcon.tsx  index.ts
src/napari_sphinx_theme/assets/scss/: global.scss  napari.scss  tailwind.scss  theme.scss  utils.scss  variables.scss
src/napari_sphinx_theme/assets/scss/components/: app-bar.scss  calendar.scss  footer.scss  global-toc.scss  page-content.scss  (+3 more)
src/napari_sphinx_theme/assets/styles/: _announcement.scss  _base.scss  _header-version-warning.scss  _scaffold.sass  index.scss
src/napari_sphinx_theme/assets/utils/: featureFlags.ts
src/napari_sphinx_theme/napari/: layout.html  search.html
src/napari_sphinx_theme/napari/partials/: app-bar.html  footer.html
src/napari_sphinx_theme/theme/napari-sphinx-theme/: base.html  theme.conf
src/napari_sphinx_theme/theme/napari_sphinx_theme/: docs-navbar.html  footer.html  layout.html  search-field.html  theme.conf
theme/: .eslintrc.js  Makefile  package.json  tailwind.config.js  vite.config.ts
theme/src/: main.tsx
theme/src/components/: media.tsx
theme/src/components/Calendar/: CalendarWeekView.tsx
theme/src/scss/: global.scss  layout.scss
user_guide/: accessibility.html  configuring.html  customizing.html  index.html  install.html  sections.html
(+15 files in other folders)
